--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,21 @@ name = "brainfuck"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "brainfuck"
+path = "src/bin.rs"
+
+[lib]
+name = "brainfuck_interpreter"
+path = "src/lib/lib.rs"
+
 [dependencies]
 clap = { version = "4.4.2", features = ["derive"] }
 thiserror = "1.0"
+
+[dev-dependencies]
+criterion = { version = "0.5.1", features = ["html_reports"] }
+
+[[bench]]
+name = "mandelbrot"
+harness = false
